feat: Query products and categories with join, Fetch